<resources>
    <string name="app_name">putt-putt bud</string>
    <string name="menu">Menu</string>
    <string name="players_screen">Players Screen</string>
    <string name="game_title"> new game </string>

    <!--    Final Score Page Strings    -->
    <string name="final_score">Final Score </string>
    <string name="play_again">Play Again </string>
    <string name="trophy">Winner Trophy</string>
    <string name="success">Success</string>
    <string name="winner">is the winner !</string>
    <string name="scoreTotal">score: </string>


    <string name="homepage_title">putt-putt bud</string>
    <string name="progress_textView">progress: hole </string>

    <string name="p1label">player 1:</string>
    <string name="p2label">player 2:</string>

    <!--    ScoreCard Page Title    -->
    <string name="scoreCard_tile"> putt-putt bud </string>
    <string name="endGame">End Game</string>

    <!--    Rules Page Strings    -->
    <string name="rulesText"> rules </string>
    <string name="rulesButton"> Return to Game </string>

    <!--    Menu Page Strings    -->
    <string name="menuText"> menu </string>
    <string name="menu1"> edit players </string>
    <string name="menu2"> clear scores </string>
    <string name="menu3"> restart </string>
    <string name="menu4"> rules </string>
    <string name="logo"> logo </string>
    <string name="return_to_game">return to game</string>
    <string name="start_game">start game</string>


    <string name="input_player_one">Input player one</string>
    <string name="input_player_two">Input player two</string>
    <string name="input_player_three">Input player three</string>
    <string name="edit_players">edit players</string>
    <string name="players"># players:</string>
    <string name="holes"># holes:</string>
    <string name="input_number_of_holes">input number of holes</string>
    <string name="input_number_of_players">input number of players</string>


</resources>