<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6EDF6E"
    tools:context=".Rules">

    <Button
        android:id="@+id/button2"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="#150202"
        android:text="@string/menu1"
        android:textAllCaps="false"
        android:textColor="#100202"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorecardTitle2"
        app:strokeColor="#F5F5F5" />

    <Button
        android:id="@+id/homeFromRules2"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:text="@string/return_to_game"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/scorecardTitle2"
        android:layout_width="229dp"
        android:layout_height="111dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="164dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/scoreCard_tile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rulesTextBox"
        android:layout_width="340dp"
        android:layout_height="452dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:text="@string/menuText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="#150202"
        android:text="@string/menu4"
        android:textAllCaps="false"
        android:textColor="#100202"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:strokeColor="#F5F5F5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="#150202"
        android:text="@string/menu3"
        android:textAllCaps="false"
        android:textColor="#100202"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:strokeColor="#F5F5F5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="#150202"
        android:text="@string/menu2"
        android:textAllCaps="false"
        android:textColor="#100202"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:strokeColor="#F5F5F5" />


</androidx.constraintlayout.widget.ConstraintLayout>