<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6EDF6E"
    tools:context=".EditPlayers">

    <TextView
        android:id="@+id/scorecardTitle3"
        android:layout_width="233dp"
        android:layout_height="125dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/scoreCard_tile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="90dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toStartOf="@+id/scorecardTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/startGame2"
        android:layout_width="181dp"
        android:layout_height="63dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="643dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="#0E0101"
        android:textSize="20sp"
        android:fontFamily="@font/comfortaa"
        app:backgroundTint="#F6F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="251dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="50">

            <LinearLayout
                android:id="@+id/leftside"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p1text"
                    android:layout_width="92dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/p1label"
                    android:textColor="#070000"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="92dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/p2label"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="#070000"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/roundedbutton"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="center"
                    android:text="@string/p2label"
                    android:textColor="#070000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightside"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/player1Name"
                    android:layout_width="206dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_player_one"
                    android:inputType="text"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/player2Name"
                    android:layout_width="206dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_player_two"
                    android:inputType="text"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/player2Name2"
                    android:layout_width="205dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_player_three"
                    android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>